fixed bug on blog-screen navbar stuck burger-menu and svg not visible

--- a/_sass/blog/_default.scss
+++ b/_sass/blog/_default.scss
@@ -61,6 +61,11 @@
     top: 0;
     z-index: 999;
     background-color: white;
+    //transition: background 0.4s ease-in-out 0.6s;
+    &.active {
+      // background: none;
+      // transition: background 0.4s ease-in-out 0s;
+    }
   }
   @include media-query($xtra-small){
     padding: 30px 60px 30px;
