--- a/_sass/home/_screen_nav.scss
+++ b/_sass/home/_screen_nav.scss
@@ -62,6 +62,15 @@ body.active {
   }
 }
 
+.bk-blog-nav.active.stuck {
+  svg {
+    fill: black;
+  }
+  .bk-burger-line {
+    background-color: black;
+  }
+}
+
 #screen-nav .screen-nav__frame {
   position: absolute;
   z-index: 1002;
